src/Web/src/App.css
.App {
  font-family: 'Poppins', sans-serif;
}

.body {
  margin: 33px auto;
  width: 1440px;
}

.navbar {
  background-color: #fff;
  height: 96px;
  border-bottom: rgba(0, 0, 0, .125) solid 1px;
}

.navbar-brand {
  color: rgb(33, 37, 41);
  height: 32px;
  width: 289px;
  margin-left: 121px;
  font-weight: bold;
  font-size: 22px;
  line-height: 32px;
}

.navbar-brand:hover, .navbar-brand:active {
  color: #000
}

.directory-title {
  height: 48px;
  width: 174px;
  color: #222B45;
  font-size: 36px;
  font-weight: bold;
  letter-spacing: 0;
  line-height: 48px;
}

.breadcrumb-div {
  margin-bottom: 32px;
  font-size: 14px;
  line-height: 24px;
}

.view-style-label {
  margin-right: 2px;
  height: 24px;
  width: 71px;
  color: #222B45;
  font-family: Poppins;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 24px;
  margin-right: 6px;
}

.dot {
  height: 25px;
  width: 25px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
}

.nav .dot {
  vertical-align: bottom;
  margin: 0 10px;
}

/* Directory */
.directory-subtitle-controls {
  display: flex;
  justify-content: space-between;
}

.view-style-buttons > a {
  padding: .05rem .375rem!important;
  padding: 0;
}

.view-style-button-first {
  margin-right: 8px;
}

/* Breadcrumbs */
.previous-page, .current-page {
  height: 24px;
  width: 101px;
  font-size: 14px;
  letter-spacing: 0;
  line-height: 24px;
}

.previous-page {
  color: #222B45;
}

.current-page {
  color: #3366FF;
}

/* Directory Filters */
.filters-container {
  height: 88px;
  border-radius: 4px;
  background-color: #A6C1FF;
  padding: 24px 10px;
}

.filter-form {
  display: flex;
  justify-content: space-between;
}

.filter-title {
  margin-left: 10px;
}

.filter-select-with-label {
  display: flex;
  flex-grow: 1.5!important;
}

.form-group-filter-with-label {
  display: flex;
  width: 100%;
}

.form-group-filter-with-label label {
  white-space: nowrap;
  margin: 5px
}

.search-sort-form {
  display: flex;
  margin: 24px 0 30px;
}

.sorting-container {
  display: flex;
  width: 100%;
}

.sort-by-form-group {
  display: flex;
  flex-grow: .75;
}

.sort-by-form-group label {
  white-space: nowrap;
  margin: 6px 16px 0 28px;
}

.sort-by select {
  width: 60%;
}

.experience-sort {
  width: 30%;
}

#search-by-name-icon {
  float: right;
  margin-right: 6px;
  margin-top: -27.5px;
  position: relative;
  z-index: 2;
}

/* Directory table list formatting */
.sort-icon {
  margin-left: 10px;
}

.directory-table {
  border: 1px solid #E4E5E6;
  border-radius: 4px;
}

.directory-table thead {
  background-color: #dfe6ff;
}

.profile-table-row-arrow {
  cursor: pointer;
}

/* Pagination */
.bottom-row {
  background-color: transparent!important;
}

.pagination-buttons-container {
  text-align: right;
}

.current-pagination-page {
  color: #000;
  font-weight: bolder;
}

.pagination-button-div a {
  padding: 5px;
  cursor: pointer;
}

.pagination-arrows {
  color: #dfe6ff;
}

/* Profile */
/* Profile Info */

.profile-card-title {
  margin: 0 0 10px 20px;
  height: 32px;
  width: 185px;
  color: #222B45;
  font-family: Poppins;
  font-size: 22px;
  font-weight: bold;
  letter-spacing: 0;
  line-height: 32px;
}

.profile-info-picture{
  width: 100px;
  height: 100px;
  object-fit: cover;
}

.profile-info-text {
  width: 35%;
  padding-bottom: 20px;
}

.profile-info-icon {
  width: 3%;
  padding-bottom: 20px;
  padding-right: 20px;
  text-align: center;
}

.small-dot {
  height: 10px;
  width: 10px;
  border-radius: 50%;
  display: inline-block;
}

.green-dot {
  background-color: #7ed321;
}

.red-dot {
  background-color: tomato;
}

/* Profile Nav */

.profile-nav {
  margin-top: 32px;
  margin-bottom: 32px!important;
  border-bottom: #eff0f2 2px solid;
}

.nav-option {
  width: 183px;
  text-align: center;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
}

.nav-option > .nav-link {
  padding-bottom: 16px;
}

.current-profile-page {
  border-bottom: #3366FF 2.5px solid;
}

/* Collapsible Table */

.profile-collapsible-container {
  border: 1px solid #E4E5E6;
  margin-bottom: 32px;
  border-radius: 5px;
}

.profile-collapsible-header {
  position: relative;
  background: #dfe6ff;
  height: 64px;
  font-family: 'Poppins';
  font-size: 22px;
  font-weight: bold;
  padding-top: 18px;
  color: #3366FF;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  margin-bottom: 0;
}

.profile-collapsible-down-icon {
  color: #3366FF;
  position: absolute;
  right: 20px;
  bottom: 20px;
}

.profile-table-header-row {
  background-color: #f8f9ff;
}

.profile-table-body-row, .profile-table-header-row {
  height: 56px;
}

.profile-table-body-row td:first-of-type, .profile-table-header-row th:first-of-type {
  padding-left: 24px;
  vertical-align: middle;
}

.profile-collapsible-icon {
  margin: 0 21px 0 26px;
}

.profile-collapsible-table {
  margin-bottom: 0!important;
}

/* Login */
.login-card, .register-card {
  width: 50%;
  margin: 0 auto;
}

.login-input, .register-input {
  padding: 10px;
}

.login-submit, .register-submit {
  margin-top: 20px;
}

.login-submit:hover, .login-submit:focus,  .login-submit:active {
  background-color: #3466ff;
  color: white;
}

/* Role Managment List */
.role-card-title{
  width: auto !important;
}
.isdamin-checkbox{
  text-align: center;
}

/* Feedback Modal */
.label-feedback{
  font-weight: bold;
}

.modal-link{
  font-size: small;
}

/* Advanced Search filter box */
.advanced-filters-container{
  border-radius: 4px;
  background-color: #DAE1F2;
  padding: 5px;
}

.advanced-search-row{
  margin-bottom:15px;
  margin-top: 15px;
}

.advanced-search-dropdown-button{
  width: 200px;
}
.filters-table{
  width: 100%;
    border-spacing: 1em;
    border-collapse: separate;
}
h5{
  text-align: right;
}

.control-spacing{
  margin-bottom: 20px;
  margin-top: 20px;
}

.date-picker-sm{
  font-size: 12px !important;
}

/* Card Profile */
.card-layout {
  display: grid;
  grid-template-columns: repeat(3, minmax(240px, 1fr));
  grid-gap: 50px;
}

.card-pagination-grid {
  margin-top: 20px;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.card-grid {
  display: grid;
  box-shadow: 0 2px 4px;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: repeat(5, 1fr);
}

.card-grid img {
  padding-right: 10px;
}

.card-content {
  width: 300px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.card-profile {
  margin-top: 20px;
  grid-column: 2 / span 3;
  grid-row: 1 / span 3;
}

.card-link {
  margin-top: 20px;
  grid-column: 12 / span 1;
  grid-row: 1 / span 1;
}


.card-contact {
  margin-top: 20px;
  grid-column: 4 / span 8;
  grid-row: 1 / span 3;
}

.card-seperator {
  grid-column: 4 / span 8;
  grid-row: 4;
}

.divider {
  border-bottom: 1px solid rgb(116, 116, 116);
  height: 2px;
  margin: 0.5em 0px 1.5em;
}

.card-person {
  grid-column: 4 / span 4;
  grid-row: 5;
}

.card-geo {
  grid-column: 8 / span 4;
  grid-row: 5;
}

